# cpp-lib

./: .gitignore  CMakeLists.txt  README.md  cmake.ps1  cmake.sh  main.cpp
deno-use/: index.js
example/: CMakeLists.txt  cmake.ps1  cmake.sh  gppmake.ps1  main.cpp
example/src/: main.cpp
flutter-use/: .gitignore  READEME.md
java-use/: Main.java
lib/: CMakeLists.txt  cmake.ps1  package.json
lib/libhello/: hello.cpp  hello.h
libhello/: CMakeLists.txt  cmake.ps1  cmake.sh  hello.h  make.ps1
libhello/lib/: hello.cpp  hello.h
node-use/: index.js
node-use-cpp/: index.js  my.js  package-lock.json  package.json
nodejs-addon/: hello.cc  package-lock.json  package.json
python-use/: index.py  linux.py  windows.py
python-use-cpp/: index.py
python3-use/: linux.py  windows.py
templates/: package.json  pnpm-lock.yaml
templates/create-cpp/: package.json  pnpm-lock.yaml
templates/create-cpp/templates/lib/: cmake.ps1
templates/create-cpp/templates/lib/lib/: hello.cpp  hello.h  main.cpp  main.h
templates/create-cpp/templates/project/: CMakeLists.txt  gppmake.ps1  release.ps1
templates/templates/lib/: CMakeLists.txt  cmake.sh  make.ps1
templates/templates/lib/lib/: hello.cpp  hello.h
wasm/: hello.cpp
