cmake_minimum_required(VERSION 3.16)
project(HELLO)
link_directories (${CMAKE_CURRENT_SOURCE_DIR}/libhello)
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/libhello)
add_library(hello SHARED ${CMAKE_CURRENT_SOURCE_DIR}/libhello/hello.cpp)
install(TARGETS DLib DESTINATION DLib-bin)
install(FILES d-hello.h DESTINATION DLib-include)
